<resources>
    <string name="app_name">Practica2</string>
    <string name="title_activity_anadir_alumnos">AnadirAlumnos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre">Nombre :</string>
    <string name="t_nombre">Introduzca nombre</string>
    <string name="apellidos">Apellidos :</string>
    <string name="t_apellidos">Introduzca apellidos</string>
    <string name="email">Email :</string>
    <string name="t_email">Introduzca email</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
</resources>